<resources>
    <string name="app_name">Popular Movies</string>
    <string name="sort_by">Sort By</string>
    <string name="most_popular">Most Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="favorites">Favourites</string>
    <string name="addFav">Add to Favourites</string>
    <string name="trailer">Watch Trailer</string>
    <string name="oops_network">Oops! There is No Network Connection Available</string>
    <string name="no_data">There is no data available.</string>
    <string name="upcoming">Upcoming</string>
    <string name="movie_rating">TMDb: %1$s/10</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="example_title">Wonder Woman</string>
    <string name="example_rating">IMDb 7.8/10</string>
    <string name="example_release">15 May, 2017</string>
    <string name="oops_something_wrong">Oops! Something Wrong.</string>
    <string name="content_authority">com.amarullah87.popularmovies</string>
</resources>
