<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/sort_by"
        android:icon="@drawable/ic_sort_white"
        app:showAsAction="ifRoom">
        <menu>
            <group
                android:id="@+id/menu_sort_by"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_by_most_popular"
                    android:checked="true"
                    android:title="@string/most_popular" />
                <item
                    android:id="@+id/sort_by_top_rated"
                    android:title="@string/top_rated" />

                <item
                    android:id="@+id/sort_by_upcoming"
                    android:title="@string/upcoming" />

                <item
                    android:id="@+id/sort_by_fav"
                    android:title="@string/favorites" />
            </group>
        </menu>
    </item>
</menu>