<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:clipToPadding="false"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/detail_horizontal_margin"
                android:paddingRight="@dimen/detail_horizontal_margin">

                <ImageView
                    android:id="@+id/moviePoster"
                    android:layout_width="@dimen/poster_width"
                    android:layout_height="@dimen/poster_height"
                    android:layout_marginBottom="@dimen/detail_horizontal_margin"
                    android:scaleType="fitXY"
                    android:layout_marginEnd="@dimen/detail_horizontal_margin"
                    android:layout_marginRight="@dimen/detail_horizontal_margin" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/movieTitle"
                        style="?android:attr/textAppearanceMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textIsSelectable="true"
                        android:textStyle="bold"
                        android:layout_marginBottom="@dimen/small_margin"
                        android:layout_marginStart="@dimen/small_margin"
                        android:layout_marginLeft="@dimen/small_margin"
                        tools:text="@string/example_title" />

                    <TextView
                        android:id="@+id/movieRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textIsSelectable="true"
                        android:layout_marginBottom="@dimen/small_margin"
                        android:layout_marginStart="@dimen/small_margin"
                        android:layout_marginLeft="@dimen/small_margin"
                        tools:text="@string/example_rating"/>

                    <TextView
                        android:id="@+id/movieReleaseDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textIsSelectable="true"
                        android:layout_marginBottom="@dimen/small_margin"
                        android:layout_marginStart="@dimen/small_margin"
                        android:layout_marginLeft="@dimen/small_margin"
                        tools:text="@string/example_release"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btnWatch"
                            android:layout_weight="1"
                            android:padding="@dimen/small_padding"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:background="@color/colorPrimary"
                            android:text="@string/trailer" />

                        <ImageButton
                            android:id="@+id/btnFavourite"
                            android:layout_weight="3"
                            android:padding="@dimen/img_fav_padding"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:background="@color/red"
                            android:src="@drawable/ic_favorite_border_white"/>

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/movieOverview"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/detail_horizontal_margin"
                android:textIsSelectable="true" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_centerInParent="true"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvTrailer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/normal_margin" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvReview"
                    android:layout_below="@+id/rvTrailer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/normal_margin"/>

            </RelativeLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>